--- a/templates/upload.html
+++ b/templates/upload.html
@@ -112,12 +112,12 @@ input[type="submit"]:hover {
 
     <div class="navbar">
       <a href="/">IC-TESTER</a>
-      <a href="#about">About</a>
+      <a href="/templates/find.html">About</a>
       <a href="#contact">IC-Finder</a>
     </div>
   
   <div class="container">
-    <h1 class="head">VPS IC-Tester</h1>
+    <h1 class="head">V2S IC-Tester</h1>
     <h2>Upload Image</h2>
   
     <form method="POST" enctype="multipart/form-data">
