--- a/templates/upload.html
+++ b/templates/upload.html
@@ -113,7 +113,7 @@ input[type="submit"]:hover {
     <div class="navbar">
       <a href="/">IC-TESTER</a>
       <a href="/templates/find.html">About</a>
-      <a href="#contact">IC-Finder</a>
+      <a href="{{ ictest_url }}">IC-Finder</a>
     </div>
   
   <div class="container">
